project('jln.mp', 'cpp', default_options : ['cpp_std=c++17', 'warning_level=3'])

if get_option('mp_debug')
  add_global_arguments('-DJLN_MP_DEBUG=1', language : 'cpp')
endif

jln_default_flags = {
  'conversion_warnings': 'off'
}
sys = build_machine.system()

# quick compilation
if sys == 'linux'
  jln_default_flags += {
    'debug': 'off',
    'whole_program': 'strip_all',
  }

  comp = meson.get_compiler('cpp').get_id()
  if ['clang', 'gcc', 'intel', 'msvc'].contains(comp)
    meson.add_postconf_script('./tools/optimize_ninja.sh', '-c' + comp)
  endif
endif

subdir('meson_jln_flags')
add_global_arguments(jln_cpp_flags, language:'cpp')
add_global_link_arguments(jln_link_flags, language:'cpp')

if get_option('standalone')
  executable('standalone_test',
             ['test/standalone_mp.cpp', 'test/standalone_smp.cpp'],
             implicit_include_directories: false,
             dependencies: declare_dependency(
               include_directories: include_directories('standalone/include')))
endif

example_dep = declare_dependency(include_directories: include_directories('include'))
test_dep = declare_dependency(include_directories: include_directories('test/include', 'include'))

executable('mp_test', 'test/mp.cpp', dependencies: test_dep, implicit_include_directories: false)

# start examples
alias_target('examples',
  executable('expr.example', 'examples/expr.cpp', dependencies: example_dep, implicit_include_directories: false),
  executable('tuple_cat.example', 'examples/tuple_cat.cpp', dependencies: example_dep, implicit_include_directories: false),
)
# stop examples

# start tests
alias_target('mp',
  alias_target('mp.algorithm',
    executable('accumulate', 'test/src/algorithm/accumulate.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('after', 'test/src/algorithm/after.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('all_of', 'test/src/algorithm/all_of.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('anticirculant_matrix', 'test/src/algorithm/anticirculant_matrix.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('any_of', 'test/src/algorithm/any_of.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('arrange', 'test/src/algorithm/arrange.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('batched', 'test/src/algorithm/batched.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('before', 'test/src/algorithm/before.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('before_after', 'test/src/algorithm/before_after.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('circulant_matrix', 'test/src/algorithm/circulant_matrix.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('collapse', 'test/src/algorithm/collapse.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('combine', 'test/src/algorithm/combine.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('compress', 'test/src/algorithm/compress.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('conjunction', 'test/src/algorithm/conjunction.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('contains', 'test/src/algorithm/contains.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('copy', 'test/src/algorithm/copy.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('copy_unique', 'test/src/algorithm/copy_unique.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('count', 'test/src/algorithm/count.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('counter', 'test/src/algorithm/counter.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('disjunction', 'test/src/algorithm/disjunction.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('drop_until', 'test/src/algorithm/drop_until.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('drop_until_xs', 'test/src/algorithm/drop_until_xs.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('drop_while', 'test/src/algorithm/drop_while.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('drop_while_xs', 'test/src/algorithm/drop_while_xs.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('ends_with', 'test/src/algorithm/ends_with.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('find', 'test/src/algorithm/find.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('find_last', 'test/src/algorithm/find_last.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('flatten', 'test/src/algorithm/flatten.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('fold', 'test/src/algorithm/fold.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('fold_right', 'test/src/algorithm/fold_right.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('fold_tree', 'test/src/algorithm/fold_tree.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('fold_xs', 'test/src/algorithm/fold_xs.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('group', 'test/src/algorithm/group.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('index', 'test/src/algorithm/index.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('intersperse', 'test/src/algorithm/intersperse.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('iota', 'test/src/algorithm/iota.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_disjoint', 'test/src/algorithm/is_disjoint.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_sorted', 'test/src/algorithm/is_sorted.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_subset', 'test/src/algorithm/is_subset.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_unique', 'test/src/algorithm/is_unique.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('lexicographical_compare', 'test/src/algorithm/lexicographical_compare.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('lower_bound', 'test/src/algorithm/lower_bound.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('make_int_sequence', 'test/src/algorithm/make_int_sequence.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('matrix_longest', 'test/src/algorithm/matrix_longest.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('matrix_shortest', 'test/src/algorithm/matrix_shortest.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('max_element', 'test/src/algorithm/max_element.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('merge', 'test/src/algorithm/merge.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('min_element', 'test/src/algorithm/min_element.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('mismatch', 'test/src/algorithm/mismatch.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('mismatch_index', 'test/src/algorithm/mismatch_index.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('none_of', 'test/src/algorithm/none_of.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('pairwise', 'test/src/algorithm/pairwise.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('pairwise_fold', 'test/src/algorithm/pairwise_fold.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('partition', 'test/src/algorithm/partition.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('permutations', 'test/src/algorithm/permutations.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('powerset', 'test/src/algorithm/powerset.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('prefix', 'test/src/algorithm/prefix.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('product', 'test/src/algorithm/product.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('regroup', 'test/src/algorithm/regroup.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('remove', 'test/src/algorithm/remove.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('remove_adjacent', 'test/src/algorithm/remove_adjacent.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('remove_prefix', 'test/src/algorithm/remove_prefix.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('remove_suffix', 'test/src/algorithm/remove_suffix.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('remove_unique', 'test/src/algorithm/remove_unique.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('repeat', 'test/src/algorithm/repeat.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('repeat_index', 'test/src/algorithm/repeat_index.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('replace', 'test/src/algorithm/replace.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('reverse', 'test/src/algorithm/reverse.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('reverse_fold', 'test/src/algorithm/reverse_fold.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('reverse_fold_right', 'test/src/algorithm/reverse_fold_right.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('rotate', 'test/src/algorithm/rotate.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('same', 'test/src/algorithm/same.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('scan', 'test/src/algorithm/scan.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('scan_right', 'test/src/algorithm/scan_right.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('search', 'test/src/algorithm/search.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('similar', 'test/src/algorithm/similar.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('skip_until', 'test/src/algorithm/skip_until.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('skip_until_xs', 'test/src/algorithm/skip_until_xs.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('skip_while', 'test/src/algorithm/skip_while.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('skip_while_xs', 'test/src/algorithm/skip_while_xs.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('sort', 'test/src/algorithm/sort.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('split', 'test/src/algorithm/split.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('split_after', 'test/src/algorithm/split_after.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('split_at', 'test/src/algorithm/split_at.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('split_before', 'test/src/algorithm/split_before.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('split_from', 'test/src/algorithm/split_from.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('split_keep_separator', 'test/src/algorithm/split_keep_separator.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('split_once', 'test/src/algorithm/split_once.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('starts_with', 'test/src/algorithm/starts_with.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('suffix', 'test/src/algorithm/suffix.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('take_until', 'test/src/algorithm/take_until.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('take_until_xs', 'test/src/algorithm/take_until_xs.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('take_while', 'test/src/algorithm/take_while.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('take_while_xs', 'test/src/algorithm/take_while_xs.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('transform', 'test/src/algorithm/transform.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('transform_at', 'test/src/algorithm/transform_at.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('transform_first', 'test/src/algorithm/transform_first.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('transform_second', 'test/src/algorithm/transform_second.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('transform_third', 'test/src/algorithm/transform_third.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('uncompress', 'test/src/algorithm/uncompress.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('unfold', 'test/src/algorithm/unfold.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('unique', 'test/src/algorithm/unique.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('unique_by', 'test/src/algorithm/unique_by.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('upper_bound', 'test/src/algorithm/upper_bound.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('zip', 'test/src/algorithm/zip.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('zip_longest', 'test/src/algorithm/zip_longest.cpp', dependencies: test_dep, implicit_include_directories: false),
  ),
  executable('assume', 'test/src/assume.cpp', dependencies: test_dep, implicit_include_directories: false),
  alias_target('mp.functional',
    executable('apply_or_identity', 'test/src/functional/apply_or_identity.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('bind_back', 'test/src/functional/bind_back.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('bind_front', 'test/src/functional/bind_front.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('capture_back', 'test/src/functional/capture_back.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('capture_front', 'test/src/functional/capture_front.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('cascade', 'test/src/functional/cascade.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('compare_with', 'test/src/functional/compare_with.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('compose', 'test/src/functional/compose.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('continuation', 'test/src/functional/continuation.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('each', 'test/src/functional/each.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('eval', 'test/src/functional/eval.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('fix', 'test/src/functional/fix.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('flip', 'test/src/functional/flip.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('identity', 'test/src/functional/identity.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('if', 'test/src/functional/if.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('invoke_twice', 'test/src/functional/invoke_twice.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('memoize', 'test/src/functional/memoize.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('not_fn', 'test/src/functional/not_fn.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('partial_tee', 'test/src/functional/partial_tee.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('partial_tee_xs', 'test/src/functional/partial_tee_xs.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('partial_transform', 'test/src/functional/partial_transform.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('partial_transform_xs', 'test/src/functional/partial_transform_xs.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('recursively', 'test/src/functional/recursively.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('select', 'test/src/functional/select.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('tee', 'test/src/functional/tee.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('try', 'test/src/functional/try.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('until', 'test/src/functional/until.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('until_last', 'test/src/functional/until_last.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('while', 'test/src/functional/while.cpp', dependencies: test_dep, implicit_include_directories: false),
  ),
  alias_target('mp.list',
    executable('append', 'test/src/list/append.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('as_list', 'test/src/list/as_list.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('at', 'test/src/list/at.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('back', 'test/src/list/back.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('clear', 'test/src/list/clear.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('drop_back', 'test/src/list/drop_back.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('drop_front', 'test/src/list/drop_front.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('enumerate', 'test/src/list/enumerate.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('erase', 'test/src/list/erase.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('front', 'test/src/list/front.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('indices', 'test/src/list/indices.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('insert', 'test/src/list/insert.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('insert_sequence', 'test/src/list/insert_sequence.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_empty', 'test/src/list/is_empty.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_list', 'test/src/list/is_list.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_not_empty', 'test/src/list/is_not_empty.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_size_of', 'test/src/list/is_size_of.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('join', 'test/src/list/join.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('list', 'test/src/list/list.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('lookup', 'test/src/list/lookup.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('offset', 'test/src/list/offset.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('pop_back', 'test/src/list/pop_back.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('pop_front', 'test/src/list/pop_front.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('prepend', 'test/src/list/prepend.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('push_back', 'test/src/list/push_back.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('push_front', 'test/src/list/push_front.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('range', 'test/src/list/range.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('size', 'test/src/list/size.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('slice', 'test/src/list/slice.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('sliding', 'test/src/list/sliding.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('swap_index', 'test/src/list/swap_index.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('take_back', 'test/src/list/take_back.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('take_front', 'test/src/list/take_front.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('wrap_in_list', 'test/src/list/wrap_in_list.cpp', dependencies: test_dep, implicit_include_directories: false),
  ),
  alias_target('mp.map',
    executable('is_map', 'test/src/map/is_map.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('map_contains', 'test/src/map/map_contains.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('map_erase', 'test/src/map/map_erase.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('map_find', 'test/src/map/map_find.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('map_insert', 'test/src/map/map_insert.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('map_keys', 'test/src/map/map_keys.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('map_replace', 'test/src/map/map_replace.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('map_update', 'test/src/map/map_update.cpp', dependencies: test_dep, implicit_include_directories: false),
  ),
  alias_target('mp.number',
    executable('as_bool', 'test/src/number/as_bool.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('as_number', 'test/src/number/as_number.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_number', 'test/src/number/is_number.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('math', 'test/src/number/math.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('numbers', 'test/src/number/numbers.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('operators', 'test/src/number/operators.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('to_bool', 'test/src/number/to_bool.cpp', dependencies: test_dep, implicit_include_directories: false),
  ),
  alias_target('mp.set',
    executable('set_contains', 'test/src/set/set_contains.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('set_difference', 'test/src/set/set_difference.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('set_find', 'test/src/set/set_find.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('set_intersection', 'test/src/set/set_intersection.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('set_push_back', 'test/src/set/set_push_back.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('set_push_back_elements', 'test/src/set/set_push_back_elements.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('set_push_front', 'test/src/set/set_push_front.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('set_push_front_elements', 'test/src/set/set_push_front_elements.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('set_union', 'test/src/set/set_union.cpp', dependencies: test_dep, implicit_include_directories: false),
  ),
  alias_target('mp.utility',
    executable('alignof', 'test/src/utility/alignof.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('always', 'test/src/utility/always.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('conditional', 'test/src/utility/conditional.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('has_type', 'test/src/utility/has_type.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('has_value_type', 'test/src/utility/has_value_type.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is', 'test/src/utility/is.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_base_of', 'test/src/utility/is_base_of.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_not', 'test/src/utility/is_not.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_specialization_of', 'test/src/utility/is_specialization_of.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('iterate', 'test/src/utility/iterate.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('lazy_void', 'test/src/utility/lazy_void.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('make_id', 'test/src/utility/make_id.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('make_index', 'test/src/utility/make_index.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('random', 'test/src/utility/random.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('rewrap_unpack', 'test/src/utility/rewrap_unpack.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('sizeof', 'test/src/utility/sizeof.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('stl_traits', 'test/src/utility/stl_traits.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('type', 'test/src/utility/type.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('unpack', 'test/src/utility/unpack.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('value_type', 'test/src/utility/value_type.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('wrapper', 'test/src/utility/wrapper.cpp', dependencies: test_dep, implicit_include_directories: false),
  ),
  alias_target('mp.value',
    executable('as_val', 'test/src/value/as_val.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('has_value', 'test/src/value/has_value.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('is_val', 'test/src/value/is_val.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('operators_', 'test/src/value/operators.cpp', dependencies: test_dep, implicit_include_directories: false),
    executable('values', 'test/src/value/values.cpp', dependencies: test_dep, implicit_include_directories: false),
  ),
)
executable('check_inc', [
  'test/autogen/algorithm@accumulate.cpp',
  'test/autogen/algorithm@after.cpp',
  'test/autogen/algorithm@all_of.cpp',
  'test/autogen/algorithm@anticirculant_matrix.cpp',
  'test/autogen/algorithm@any_of.cpp',
  'test/autogen/algorithm@arrange.cpp',
  'test/autogen/algorithm@batched.cpp',
  'test/autogen/algorithm@before.cpp',
  'test/autogen/algorithm@before_after.cpp',
  'test/autogen/algorithm@circulant_matrix.cpp',
  'test/autogen/algorithm@collapse.cpp',
  'test/autogen/algorithm@combine.cpp',
  'test/autogen/algorithm@compress.cpp',
  'test/autogen/algorithm@conjunction.cpp',
  'test/autogen/algorithm@contains.cpp',
  'test/autogen/algorithm@copy.cpp',
  'test/autogen/algorithm@copy_unique.cpp',
  'test/autogen/algorithm@count.cpp',
  'test/autogen/algorithm@counter.cpp',
  'test/autogen/algorithm@disjunction.cpp',
  'test/autogen/algorithm@drop_until.cpp',
  'test/autogen/algorithm@drop_until_xs.cpp',
  'test/autogen/algorithm@drop_while.cpp',
  'test/autogen/algorithm@drop_while_xs.cpp',
  'test/autogen/algorithm@ends_with.cpp',
  'test/autogen/algorithm@find.cpp',
  'test/autogen/algorithm@find_last.cpp',
  'test/autogen/algorithm@flatten.cpp',
  'test/autogen/algorithm@fold.cpp',
  'test/autogen/algorithm@fold_right.cpp',
  'test/autogen/algorithm@fold_tree.cpp',
  'test/autogen/algorithm@fold_xs.cpp',
  'test/autogen/algorithm@group.cpp',
  'test/autogen/algorithm@index.cpp',
  'test/autogen/algorithm@intersperse.cpp',
  'test/autogen/algorithm@iota.cpp',
  'test/autogen/algorithm@is_disjoint.cpp',
  'test/autogen/algorithm@is_sorted.cpp',
  'test/autogen/algorithm@is_subset.cpp',
  'test/autogen/algorithm@is_unique.cpp',
  'test/autogen/algorithm@lexicographical_compare.cpp',
  'test/autogen/algorithm@lower_bound.cpp',
  'test/autogen/algorithm@make_int_sequence.cpp',
  'test/autogen/algorithm@matrix_longest.cpp',
  'test/autogen/algorithm@matrix_shortest.cpp',
  'test/autogen/algorithm@max_element.cpp',
  'test/autogen/algorithm@merge.cpp',
  'test/autogen/algorithm@min_element.cpp',
  'test/autogen/algorithm@mismatch.cpp',
  'test/autogen/algorithm@mismatch_index.cpp',
  'test/autogen/algorithm@none_of.cpp',
  'test/autogen/algorithm@pairwise.cpp',
  'test/autogen/algorithm@pairwise_fold.cpp',
  'test/autogen/algorithm@partition.cpp',
  'test/autogen/algorithm@permutations.cpp',
  'test/autogen/algorithm@powerset.cpp',
  'test/autogen/algorithm@prefix.cpp',
  'test/autogen/algorithm@product.cpp',
  'test/autogen/algorithm@regroup.cpp',
  'test/autogen/algorithm@remove.cpp',
  'test/autogen/algorithm@remove_adjacent.cpp',
  'test/autogen/algorithm@remove_prefix.cpp',
  'test/autogen/algorithm@remove_suffix.cpp',
  'test/autogen/algorithm@remove_unique.cpp',
  'test/autogen/algorithm@repeat.cpp',
  'test/autogen/algorithm@repeat_index.cpp',
  'test/autogen/algorithm@replace.cpp',
  'test/autogen/algorithm@reverse.cpp',
  'test/autogen/algorithm@reverse_fold.cpp',
  'test/autogen/algorithm@reverse_fold_right.cpp',
  'test/autogen/algorithm@rotate.cpp',
  'test/autogen/algorithm@same.cpp',
  'test/autogen/algorithm@scan.cpp',
  'test/autogen/algorithm@scan_right.cpp',
  'test/autogen/algorithm@search.cpp',
  'test/autogen/algorithm@similar.cpp',
  'test/autogen/algorithm@skip_until.cpp',
  'test/autogen/algorithm@skip_until_xs.cpp',
  'test/autogen/algorithm@skip_while.cpp',
  'test/autogen/algorithm@skip_while_xs.cpp',
  'test/autogen/algorithm@sort.cpp',
  'test/autogen/algorithm@split.cpp',
  'test/autogen/algorithm@split_after.cpp',
  'test/autogen/algorithm@split_at.cpp',
  'test/autogen/algorithm@split_before.cpp',
  'test/autogen/algorithm@split_from.cpp',
  'test/autogen/algorithm@split_keep_separator.cpp',
  'test/autogen/algorithm@split_once.cpp',
  'test/autogen/algorithm@starts_with.cpp',
  'test/autogen/algorithm@suffix.cpp',
  'test/autogen/algorithm@take_until.cpp',
  'test/autogen/algorithm@take_until_xs.cpp',
  'test/autogen/algorithm@take_while.cpp',
  'test/autogen/algorithm@take_while_xs.cpp',
  'test/autogen/algorithm@transform.cpp',
  'test/autogen/algorithm@transform_at.cpp',
  'test/autogen/algorithm@transform_first.cpp',
  'test/autogen/algorithm@transform_second.cpp',
  'test/autogen/algorithm@transform_third.cpp',
  'test/autogen/algorithm@uncompress.cpp',
  'test/autogen/algorithm@unfold.cpp',
  'test/autogen/algorithm@unique.cpp',
  'test/autogen/algorithm@unique_by.cpp',
  'test/autogen/algorithm@upper_bound.cpp',
  'test/autogen/algorithm@zip.cpp',
  'test/autogen/algorithm@zip_longest.cpp',
  'test/autogen/detail@compiler.cpp',
  'test/autogen/detail@config.cpp',
  'test/autogen/detail@enable_callable_if.cpp',
  'test/autogen/detail@expr_conversion.cpp',
  'test/autogen/detail@expr_to_bool.cpp',
  'test/autogen/detail@first.cpp',
  'test/autogen/detail@sequence.cpp',
  'test/autogen/detail@smp_listify_or_monadic_xs.cpp',
  'test/autogen/functional@apply_or_identity.cpp',
  'test/autogen/functional@bind_back.cpp',
  'test/autogen/functional@bind_front.cpp',
  'test/autogen/functional@call.cpp',
  'test/autogen/functional@capture_back.cpp',
  'test/autogen/functional@capture_front.cpp',
  'test/autogen/functional@cascade.cpp',
  'test/autogen/functional@compare_with.cpp',
  'test/autogen/functional@compose.cpp',
  'test/autogen/functional@continuation.cpp',
  'test/autogen/functional@each.cpp',
  'test/autogen/functional@eval.cpp',
  'test/autogen/functional@fix.cpp',
  'test/autogen/functional@flip.cpp',
  'test/autogen/functional@identity.cpp',
  'test/autogen/functional@if.cpp',
  'test/autogen/functional@invoke_twice.cpp',
  'test/autogen/functional@memoize.cpp',
  'test/autogen/functional@monadic.cpp',
  'test/autogen/functional@not_fn.cpp',
  'test/autogen/functional@partial_tee.cpp',
  'test/autogen/functional@partial_tee_xs.cpp',
  'test/autogen/functional@partial_transform.cpp',
  'test/autogen/functional@partial_transform_xs.cpp',
  'test/autogen/functional@recursively.cpp',
  'test/autogen/functional@select.cpp',
  'test/autogen/functional@tee.cpp',
  'test/autogen/functional@try.cpp',
  'test/autogen/functional@until.cpp',
  'test/autogen/functional@until_last.cpp',
  'test/autogen/functional@while.cpp',
  'test/autogen/list@append.cpp',
  'test/autogen/list@as_list.cpp',
  'test/autogen/list@at.cpp',
  'test/autogen/list@back.cpp',
  'test/autogen/list@clear.cpp',
  'test/autogen/list@drop_back.cpp',
  'test/autogen/list@drop_front.cpp',
  'test/autogen/list@enumerate.cpp',
  'test/autogen/list@erase.cpp',
  'test/autogen/list@front.cpp',
  'test/autogen/list@indices.cpp',
  'test/autogen/list@insert.cpp',
  'test/autogen/list@insert_sequence.cpp',
  'test/autogen/list@is_empty.cpp',
  'test/autogen/list@is_list.cpp',
  'test/autogen/list@is_not_empty.cpp',
  'test/autogen/list@is_size_of.cpp',
  'test/autogen/list@join.cpp',
  'test/autogen/list@list.cpp',
  'test/autogen/list@listify.cpp',
  'test/autogen/list@lookup.cpp',
  'test/autogen/list@offset.cpp',
  'test/autogen/list@pop_back.cpp',
  'test/autogen/list@pop_front.cpp',
  'test/autogen/list@prepend.cpp',
  'test/autogen/list@push_back.cpp',
  'test/autogen/list@push_front.cpp',
  'test/autogen/list@range.cpp',
  'test/autogen/list@size.cpp',
  'test/autogen/list@slice.cpp',
  'test/autogen/list@sliding.cpp',
  'test/autogen/list@swap_index.cpp',
  'test/autogen/list@take_back.cpp',
  'test/autogen/list@take_front.cpp',
  'test/autogen/list@wrap_in_list.cpp',
  'test/autogen/main.cpp',
  'test/autogen/map@is_map.cpp',
  'test/autogen/map@map_contains.cpp',
  'test/autogen/map@map_erase.cpp',
  'test/autogen/map@map_find.cpp',
  'test/autogen/map@map_insert.cpp',
  'test/autogen/map@map_keys.cpp',
  'test/autogen/map@map_replace.cpp',
  'test/autogen/map@map_update.cpp',
  'test/autogen/mp.cpp',
  'test/autogen/number@as_bool.cpp',
  'test/autogen/number@as_number.cpp',
  'test/autogen/number@is_number.cpp',
  'test/autogen/number@math.cpp',
  'test/autogen/number@not.cpp',
  'test/autogen/number@number.cpp',
  'test/autogen/number@numbers.cpp',
  'test/autogen/number@operators.cpp',
  'test/autogen/number@to_bool.cpp',
  'test/autogen/set@set_contains.cpp',
  'test/autogen/set@set_difference.cpp',
  'test/autogen/set@set_find.cpp',
  'test/autogen/set@set_intersection.cpp',
  'test/autogen/set@set_push_back.cpp',
  'test/autogen/set@set_push_back_elements.cpp',
  'test/autogen/set@set_push_front.cpp',
  'test/autogen/set@set_push_front_elements.cpp',
  'test/autogen/set@set_union.cpp',
  'test/autogen/smp@algorithm@accumulate.cpp',
  'test/autogen/smp@algorithm@after.cpp',
  'test/autogen/smp@algorithm@all_of.cpp',
  'test/autogen/smp@algorithm@anticirculant_matrix.cpp',
  'test/autogen/smp@algorithm@any_of.cpp',
  'test/autogen/smp@algorithm@arrange.cpp',
  'test/autogen/smp@algorithm@batched.cpp',
  'test/autogen/smp@algorithm@before.cpp',
  'test/autogen/smp@algorithm@before_after.cpp',
  'test/autogen/smp@algorithm@circulant_matrix.cpp',
  'test/autogen/smp@algorithm@collapse.cpp',
  'test/autogen/smp@algorithm@combine.cpp',
  'test/autogen/smp@algorithm@compress.cpp',
  'test/autogen/smp@algorithm@conjunction.cpp',
  'test/autogen/smp@algorithm@contains.cpp',
  'test/autogen/smp@algorithm@copy.cpp',
  'test/autogen/smp@algorithm@copy_unique.cpp',
  'test/autogen/smp@algorithm@count.cpp',
  'test/autogen/smp@algorithm@counter.cpp',
  'test/autogen/smp@algorithm@disjunction.cpp',
  'test/autogen/smp@algorithm@drop_until.cpp',
  'test/autogen/smp@algorithm@drop_until_xs.cpp',
  'test/autogen/smp@algorithm@drop_while.cpp',
  'test/autogen/smp@algorithm@drop_while_xs.cpp',
  'test/autogen/smp@algorithm@ends_with.cpp',
  'test/autogen/smp@algorithm@find.cpp',
  'test/autogen/smp@algorithm@find_last.cpp',
  'test/autogen/smp@algorithm@flatten.cpp',
  'test/autogen/smp@algorithm@fold.cpp',
  'test/autogen/smp@algorithm@fold_right.cpp',
  'test/autogen/smp@algorithm@fold_tree.cpp',
  'test/autogen/smp@algorithm@fold_xs.cpp',
  'test/autogen/smp@algorithm@group.cpp',
  'test/autogen/smp@algorithm@index.cpp',
  'test/autogen/smp@algorithm@intersperse.cpp',
  'test/autogen/smp@algorithm@iota.cpp',
  'test/autogen/smp@algorithm@is_disjoint.cpp',
  'test/autogen/smp@algorithm@is_sorted.cpp',
  'test/autogen/smp@algorithm@is_subset.cpp',
  'test/autogen/smp@algorithm@is_unique.cpp',
  'test/autogen/smp@algorithm@lexicographical_compare.cpp',
  'test/autogen/smp@algorithm@lower_bound.cpp',
  'test/autogen/smp@algorithm@make_int_sequence.cpp',
  'test/autogen/smp@algorithm@matrix_longest.cpp',
  'test/autogen/smp@algorithm@matrix_shortest.cpp',
  'test/autogen/smp@algorithm@max_element.cpp',
  'test/autogen/smp@algorithm@merge.cpp',
  'test/autogen/smp@algorithm@min_element.cpp',
  'test/autogen/smp@algorithm@mismatch.cpp',
  'test/autogen/smp@algorithm@mismatch_index.cpp',
  'test/autogen/smp@algorithm@none_of.cpp',
  'test/autogen/smp@algorithm@pairwise.cpp',
  'test/autogen/smp@algorithm@pairwise_fold.cpp',
  'test/autogen/smp@algorithm@partition.cpp',
  'test/autogen/smp@algorithm@permutations.cpp',
  'test/autogen/smp@algorithm@powerset.cpp',
  'test/autogen/smp@algorithm@prefix.cpp',
  'test/autogen/smp@algorithm@product.cpp',
  'test/autogen/smp@algorithm@regroup.cpp',
  'test/autogen/smp@algorithm@remove.cpp',
  'test/autogen/smp@algorithm@remove_adjacent.cpp',
  'test/autogen/smp@algorithm@remove_prefix.cpp',
  'test/autogen/smp@algorithm@remove_suffix.cpp',
  'test/autogen/smp@algorithm@remove_unique.cpp',
  'test/autogen/smp@algorithm@repeat.cpp',
  'test/autogen/smp@algorithm@repeat_index.cpp',
  'test/autogen/smp@algorithm@replace.cpp',
  'test/autogen/smp@algorithm@reverse.cpp',
  'test/autogen/smp@algorithm@reverse_fold.cpp',
  'test/autogen/smp@algorithm@reverse_fold_right.cpp',
  'test/autogen/smp@algorithm@rotate.cpp',
  'test/autogen/smp@algorithm@same.cpp',
  'test/autogen/smp@algorithm@scan.cpp',
  'test/autogen/smp@algorithm@scan_right.cpp',
  'test/autogen/smp@algorithm@search.cpp',
  'test/autogen/smp@algorithm@similar.cpp',
  'test/autogen/smp@algorithm@skip_until.cpp',
  'test/autogen/smp@algorithm@skip_until_xs.cpp',
  'test/autogen/smp@algorithm@skip_while.cpp',
  'test/autogen/smp@algorithm@skip_while_xs.cpp',
  'test/autogen/smp@algorithm@sort.cpp',
  'test/autogen/smp@algorithm@split.cpp',
  'test/autogen/smp@algorithm@split_after.cpp',
  'test/autogen/smp@algorithm@split_at.cpp',
  'test/autogen/smp@algorithm@split_before.cpp',
  'test/autogen/smp@algorithm@split_from.cpp',
  'test/autogen/smp@algorithm@split_keep_separator.cpp',
  'test/autogen/smp@algorithm@split_once.cpp',
  'test/autogen/smp@algorithm@starts_with.cpp',
  'test/autogen/smp@algorithm@suffix.cpp',
  'test/autogen/smp@algorithm@take_until.cpp',
  'test/autogen/smp@algorithm@take_until_xs.cpp',
  'test/autogen/smp@algorithm@take_while.cpp',
  'test/autogen/smp@algorithm@take_while_xs.cpp',
  'test/autogen/smp@algorithm@transform.cpp',
  'test/autogen/smp@algorithm@transform_at.cpp',
  'test/autogen/smp@algorithm@transform_first.cpp',
  'test/autogen/smp@algorithm@transform_second.cpp',
  'test/autogen/smp@algorithm@transform_third.cpp',
  'test/autogen/smp@algorithm@uncompress.cpp',
  'test/autogen/smp@algorithm@unfold.cpp',
  'test/autogen/smp@algorithm@unique.cpp',
  'test/autogen/smp@algorithm@unique_by.cpp',
  'test/autogen/smp@algorithm@upper_bound.cpp',
  'test/autogen/smp@algorithm@zip.cpp',
  'test/autogen/smp@algorithm@zip_longest.cpp',
  'test/autogen/smp@assume.cpp',
  'test/autogen/smp@concepts.cpp',
  'test/autogen/smp@contract.cpp',
  'test/autogen/smp@functional@apply_or_identity.cpp',
  'test/autogen/smp@functional@bind_back.cpp',
  'test/autogen/smp@functional@bind_front.cpp',
  'test/autogen/smp@functional@capture_back.cpp',
  'test/autogen/smp@functional@capture_front.cpp',
  'test/autogen/smp@functional@cascade.cpp',
  'test/autogen/smp@functional@compare_with.cpp',
  'test/autogen/smp@functional@compose.cpp',
  'test/autogen/smp@functional@continuation.cpp',
  'test/autogen/smp@functional@each.cpp',
  'test/autogen/smp@functional@eval.cpp',
  'test/autogen/smp@functional@fix.cpp',
  'test/autogen/smp@functional@flip.cpp',
  'test/autogen/smp@functional@identity.cpp',
  'test/autogen/smp@functional@if.cpp',
  'test/autogen/smp@functional@invoke_twice.cpp',
  'test/autogen/smp@functional@memoize.cpp',
  'test/autogen/smp@functional@not_fn.cpp',
  'test/autogen/smp@functional@partial_tee.cpp',
  'test/autogen/smp@functional@partial_tee_xs.cpp',
  'test/autogen/smp@functional@partial_transform.cpp',
  'test/autogen/smp@functional@partial_transform_xs.cpp',
  'test/autogen/smp@functional@recursively.cpp',
  'test/autogen/smp@functional@select.cpp',
  'test/autogen/smp@functional@sfinaefwd.cpp',
  'test/autogen/smp@functional@tee.cpp',
  'test/autogen/smp@functional@until.cpp',
  'test/autogen/smp@functional@until_last.cpp',
  'test/autogen/smp@functional@while.cpp',
  'test/autogen/smp@list@append.cpp',
  'test/autogen/smp@list@as_list.cpp',
  'test/autogen/smp@list@at.cpp',
  'test/autogen/smp@list@back.cpp',
  'test/autogen/smp@list@clear.cpp',
  'test/autogen/smp@list@drop_back.cpp',
  'test/autogen/smp@list@drop_front.cpp',
  'test/autogen/smp@list@enumerate.cpp',
  'test/autogen/smp@list@erase.cpp',
  'test/autogen/smp@list@front.cpp',
  'test/autogen/smp@list@indices.cpp',
  'test/autogen/smp@list@insert.cpp',
  'test/autogen/smp@list@insert_sequence.cpp',
  'test/autogen/smp@list@is_empty.cpp',
  'test/autogen/smp@list@is_list.cpp',
  'test/autogen/smp@list@is_not_empty.cpp',
  'test/autogen/smp@list@is_size_of.cpp',
  'test/autogen/smp@list@join.cpp',
  'test/autogen/smp@list@listify.cpp',
  'test/autogen/smp@list@lookup.cpp',
  'test/autogen/smp@list@offset.cpp',
  'test/autogen/smp@list@pop_back.cpp',
  'test/autogen/smp@list@pop_front.cpp',
  'test/autogen/smp@list@prepend.cpp',
  'test/autogen/smp@list@push_back.cpp',
  'test/autogen/smp@list@push_front.cpp',
  'test/autogen/smp@list@range.cpp',
  'test/autogen/smp@list@size.cpp',
  'test/autogen/smp@list@slice.cpp',
  'test/autogen/smp@list@sliding.cpp',
  'test/autogen/smp@list@swap_index.cpp',
  'test/autogen/smp@list@take_back.cpp',
  'test/autogen/smp@list@take_front.cpp',
  'test/autogen/smp@list@wrap_in_list.cpp',
  'test/autogen/smp@map@is_map.cpp',
  'test/autogen/smp@map@map_contains.cpp',
  'test/autogen/smp@map@map_erase.cpp',
  'test/autogen/smp@map@map_find.cpp',
  'test/autogen/smp@map@map_insert.cpp',
  'test/autogen/smp@map@map_keys.cpp',
  'test/autogen/smp@map@map_replace.cpp',
  'test/autogen/smp@map@map_update.cpp',
  'test/autogen/smp@number@as_bool.cpp',
  'test/autogen/smp@number@as_number.cpp',
  'test/autogen/smp@number@is_number.cpp',
  'test/autogen/smp@number@math.cpp',
  'test/autogen/smp@number@not.cpp',
  'test/autogen/smp@number@numbers.cpp',
  'test/autogen/smp@number@operators.cpp',
  'test/autogen/smp@number@to_bool.cpp',
  'test/autogen/smp@set@set_contains.cpp',
  'test/autogen/smp@set@set_difference.cpp',
  'test/autogen/smp@set@set_find.cpp',
  'test/autogen/smp@set@set_intersection.cpp',
  'test/autogen/smp@set@set_push_back.cpp',
  'test/autogen/smp@set@set_push_back_elements.cpp',
  'test/autogen/smp@set@set_push_front.cpp',
  'test/autogen/smp@set@set_push_front_elements.cpp',
  'test/autogen/smp@set@set_union.cpp',
  'test/autogen/smp@sfinae.cpp',
  'test/autogen/smp@smp.cpp',
  'test/autogen/smp@utility@alignof.cpp',
  'test/autogen/smp@utility@always.cpp',
  'test/autogen/smp@utility@conditional.cpp',
  'test/autogen/smp@utility@has_type.cpp',
  'test/autogen/smp@utility@has_value_type.cpp',
  'test/autogen/smp@utility@is.cpp',
  'test/autogen/smp@utility@is_base_of.cpp',
  'test/autogen/smp@utility@is_not.cpp',
  'test/autogen/smp@utility@is_specialization_of.cpp',
  'test/autogen/smp@utility@iterate.cpp',
  'test/autogen/smp@utility@make_id.cpp',
  'test/autogen/smp@utility@make_index.cpp',
  'test/autogen/smp@utility@random.cpp',
  'test/autogen/smp@utility@rewrap_unpack.cpp',
  'test/autogen/smp@utility@sizeof.cpp',
  'test/autogen/smp@utility@stl_traits.cpp',
  'test/autogen/smp@utility@type.cpp',
  'test/autogen/smp@utility@unpack.cpp',
  'test/autogen/smp@utility@value_type.cpp',
  'test/autogen/smp@value@as_val.cpp',
  'test/autogen/smp@value@has_value.cpp',
  'test/autogen/smp@value@is_val.cpp',
  'test/autogen/smp@value@operators.cpp',
  'test/autogen/smp@value@values.cpp',
  'test/autogen/utility@alignof.cpp',
  'test/autogen/utility@always.cpp',
  'test/autogen/utility@conditional.cpp',
  'test/autogen/utility@has_type.cpp',
  'test/autogen/utility@has_value_type.cpp',
  'test/autogen/utility@inherit.cpp',
  'test/autogen/utility@is.cpp',
  'test/autogen/utility@is_base_of.cpp',
  'test/autogen/utility@is_not.cpp',
  'test/autogen/utility@is_specialization_of.cpp',
  'test/autogen/utility@iterate.cpp',
  'test/autogen/utility@lazy_void.cpp',
  'test/autogen/utility@make_id.cpp',
  'test/autogen/utility@make_index.cpp',
  'test/autogen/utility@random.cpp',
  'test/autogen/utility@rewrap_unpack.cpp',
  'test/autogen/utility@sizeof.cpp',
  'test/autogen/utility@stl_traits.cpp',
  'test/autogen/utility@type.cpp',
  'test/autogen/utility@unpack.cpp',
  'test/autogen/utility@value_type.cpp',
  'test/autogen/utility@wrapper.cpp',
  'test/autogen/value@as_val.cpp',
  'test/autogen/value@has_value.cpp',
  'test/autogen/value@is_val.cpp',
  'test/autogen/value@operators.cpp',
  'test/autogen/value@val.cpp',
  'test/autogen/value@values.cpp'
], dependencies: test_dep, implicit_include_directories: false)
# stop tests
